# clacks

./: .gitignore  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  README.md  architecture.md  package-lock.json  package.json  vite.config.ts
docs/superpowers/notes/: 2026-07-17-sandbox-echo.sb.example  2026-07-17-skeleton-findings.md
docs/superpowers/plans/: 2026-07-17-walking-skeleton.md  2026-07-18-phase2-ports-adapters.md  2026-07-18-phase3-core-orchestrator.md  2026-07-18-phase4-real-pipeline.md  2026-07-20-phase5-gui-reliability.md  2026-07-21-phase6-hook-race-and-latency-fix.md
docs/superpowers/specs/: 2026-07-17-clacks-design.md  2026-07-21-phase6-hook-race-and-latency-fix-design.md
runtime/echo/: CLAUDE.md
runtime/echo/.claude/: settings.json
runtime/echo/.claude/hooks/: extract-reply.sh
skeleton/: Cargo.toml
skeleton/src/: main.rs  outbox.rs  pty.rs  pty_input.rs  telegram.rs
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  gui.rs  lib.rs  ports.rs
src-tauri/src/adapters/: clock.rs  mod.rs  outbox.rs  pty.rs  store.rs  telegram.rs
src-tauri/src/core/: contract.rs  envelope.rs  mod.rs  pipeline.rs  session.rs
src-tauri/tests/: fakes_selftest.rs  orchestrator.rs
src-tauri/tests/support/: mod.rs
templates/: README.md
templates/cyrano/: CLAUDE.md
templates/cyrano/.claude/: settings.json
templates/echo/.claude/hooks/: extract-reply.sh
templates/sandbox/: clacks.sb
templates/taster/: CLAUDE.md
templates/taster/.claude/: settings.json
tests/hook/: fixture-thinking-race.jsonl  fixture-transcript.jsonl  test_extract_reply.sh
