[package]
name = "clacks-skeleton"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "8.2.0"
portable-pty = "0.9.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "form", "json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"
